# azure-orbital-space-sdk-client

./: CLAUDE.md  GITHUB_SETUP.md  LOCAL_VS_CI_BUILD.md  SETUP_GUIDE.md  UPGRADE_SUMMARY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yaml  run-integrationTests-dotnet.yaml
spacefx/security/: __init__.py  validation.py
src/: spacesdk-client.csproj
test/debugClient/: debugClient.csproj
test/integrationTests/: integrationTests.csproj
test/unit/security/: __init__.py  test_validation.py
