[tool.poetry]
name = "microsoftazurespacefx"
description = "Write Payload Applications leveraging the Microsoft Azure Orbital Space SDK"
authors = ["Azure Space SDK"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Topic :: Software Development :: Build Tools", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3 :: Only"]
version = "0.11.0"
readme = "README.md"

packages = [
    { include = "spacefx" },
]
include = [
    {path = "spacefx/protos/**/*"},
    {path = "spacefx/spacefxClient/*"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pythonnet = "^3.0.3"
grpcio-tools = "^1.48.2"
grpcio = "^1.48.2"
protobuf = "^4.25.8"

[tool.poetry.group.spacefx-dev.dependencies]
pytest = "^7.2.1"
pip = "*"
setuptools = "*"
wheel = "*"
build = "*"
mypy = "*"
mypy-extensions = "*"
mypy-protobuf = "*"
debugpy = "*"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
