[tool.poetry]
name = "microsoftazurespacefx"
description = "Write Payload Applications leveraging the Microsoft Azure Orbital Space SDK"
authors = ["Azure Space SDK"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Topic :: Software Development :: Build Tools", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3 :: Only"]
version = "0.11.0"
readme = "README.md"

packages = [
    { include = "spacefx" },
]
include = [
    {path = "spacefx/protos/**/*"},
    {path = "spacefx/spacefxClient/*"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.15"
pythonnet = "^3.0.4"
grpcio-tools = "^1.69.0"
grpcio = "^1.69.0"
protobuf = "^5.29.2"

[tool.poetry.group.spacefx-dev.dependencies]
pytest = "^8.3.4"
pip = "*"
setuptools = "*"
wheel = "*"
build = "*"
mypy = "*"
mypy-extensions = "*"
mypy-protobuf = "*"
debugpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
